Added additional styling to initial blog page

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,15 +16,15 @@
 <body>
     <main>
         <section>
-            <h2>My First blog</h2>
+            <p>My First Blog</p>
         </section>
         <section>
             <h3>Username</h3>
             <input placeholder="Enter Username">
             <h3>Title</h3>
             <input placeholder="Enter Title">
-            <h3>content</h3>
-            <input id=content placeholder="What's on your mind?">
+            <h3>Content</h3>
+            <textarea id=content placeholder="What's on your mind?"></textarea>
             <br>
             <button type="button">Submit!</button>
         </section>
