Added dark/light mode toggle to main blog page

--- a/assets/index.html
+++ b/assets/index.html
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
-
-<header>
-    <h1>My First Blog</h1>
-</header>
-
-<body>
+<body class="container light">
+    <header>
+        <h1>My First Blog</h1>
+        <input type="checkbox" id="theme-switcher">
+    </header>
     <main>
         <section>
             <p>My First Blog</p>
@@ -28,6 +27,7 @@
             <br>
             <button type="button">Submit!</button>
         </section>
+        <script src="js/logic.js"></script>
         <script src="js/form.js"></script>
     </main>
 </body>
