--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/blog.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/blog.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body class="container light">
@@ -23,8 +23,8 @@
         <a href="https://jeremydray.github.io/jeremiah-portfolio" id="portfolio" target="_blank">Visit my
             portfolio!</a>
     </footer>
-    <script src="js/logic.js"></script>
-    <script src="js/blog.js"></script>
+    <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/blog.js"></script>
 </body>
 
 </html>
