--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Blog!</title>
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/form.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/form.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body class="container light">
@@ -36,8 +36,8 @@
     <footer>
         <a href="https://jeremydray.github.io/jeremiah-portfolio" id="portfolio" target="_blank">Visit my portfolio!</a>
     </footer>
-    <script src="js/logic.js"></script>
-    <script src="js/form.js"></script>
+    <script src="./assets/js/logic.js"></script>
+    <script src="./assets/js/form.js"></script>
 </body>
 
 </html>
