Added media query scaling and minor tweaks to appearance

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <label><input type="checkbox" id="theme-switcher">Click to Toggle Light/Dark Mode</label>
     </header>
     <main>
-        <section>
+        <section id="desktop" id="column-1">
             <p>My First Blog</p>
         </section>
-        <section>
+        <section id="column-2">
             <h3>Blog Title</h3>
             <input id="title" placeholder="Enter Blog Title">
             <h3>Username</h3>
