--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body class="container light">
     <header>
         <h1>My First Blog</h1>
+        <!-- Added button to go to blog post page and an option to toggle dark/light mode -->
         <a href="blog.html"><button>Jump to Blog Posts</button></a>
         <label><input type="checkbox" id="theme-switcher">Click to Toggle Light/Dark Mode</label>
     </header>
